--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,12 @@
 <h1>Create new Article</h1>
+<h2> Errors</h2>
+<% if @article.errors.any? %>
+  <ul>
+  <% @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+  </ul>
+<% end %>
 
 <%= form_for @article do |a| %>
   <p>
