applying bootstrap to pages and flash messages

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,26 +1,37 @@
-<% if @article.errors.any? %>
-<h2> Errors</h2>
-  <ul>
-  <% @article.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-  </ul>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
-<%= form_for @article do |a| %>
-  <p>
-    <%= a.label :title %> <br/>
-    <%= a.text_field :title %>
-  </p>
+<div class="row">
+  <div class="col-xs-12">
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |a| %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+        <%= a.label :title %> <br/>
+        </div>
+        <div class="col-sm-8">
+        <%= a.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+        </div>
+      </div>
+      
   
-  <p>
-    <%= a.label :description %> <br/>
-    <%= a.text_area :description %>
-  </p>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= a.label :description %> <br/>
+        </div>  
+        <div class="col-sm-8">
+          <%= a.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
+        </div>
+      </div>
   
-  <p>
-    <%= a.submit %>
-  </p>
-<% end %>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= a.submit class: "btn btn-primary btn-lg" %>
+        </div>  
+      </div>
+ 
+    <% end %>
 
-<%= link_to "Back to articles listing", articles_path %>
+      <div class="col-xs-4 col-xs-offset-4">
+        [<%= link_to "Cancel request and return to articles listing", articles_path %>]
+      </div>
+  </div>
+</div>
