--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,14 @@
 </head>
 <body>
 
-
+<%= render 'layouts/navigation' %>
 <%= render 'layouts/messages' %>
 
+<div class="container">
 <%= yield %>
+</div>
+
+<%= render 'layouts/footer' %>
 
 <%= debug(params) if Rails.env.development? %>
 
