--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>This is home page</h1>
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to "Sign up Now", "#", class: "btn btn-danger btn-lg btn-xlarge"  %>
 
-<%= link_to "Alpha Blog", articles_path %> | <%= link_to 'About', about_path %>
+</div>
